@@ -7,16 +7,14 @@ var utils = require("./utils");
 module.exports = function (app) {
     return function contentLength(env, callback) {
         app(env, function (status, headers, body) {
-            if (utils.STATUS_WITH_NO_ENTITY_BODY.indexOf(status) == -1 &&
-                !("Content-Length" in headers) &&
-                !headers["Transfer-Encoding"]) {
-                    if (typeof body == "string") {
-                        headers["Content-Length"] = Buffer.byteLength(body).toString();
-                    } else if (typeof body.length == "number") {
-                        headers["Content-Length"] = String(body.length);
-                    } else {
-                        env.error.write("Cannot set Content-Length for body with no length\n");
-                    }
+            if (!("Content-Length" in headers) && !headers["Transfer-Encoding"] && !utils.emptyBody(status)) {
+                if (typeof body == "string") {
+                    headers["Content-Length"] = Buffer.byteLength(body).toString();
+                } else if (typeof body.length == "number") {
+                    headers["Content-Length"] = String(body.length);
+                } else {
+                    env.error.write("Cannot set Content-Length for body with no length\n");
+                }
             }
 
             callback(status, headers, body);
