@@ -115,19 +115,22 @@ function createServer(app, opts) {
             error: process.stderr
         });
 
-        var headOnly = env.requestMethod == "HEAD";
-
         // Call the app.
         app(env, function handleResponse(status, headers, body) {
-            if (headOnly) {
+            var isEmpty = env.requestMethod == "HEAD" || utils.emptyBody(status);
+            var isStream = (body instanceof EventEmitter);
+
+            if (isEmpty) {
                 headers["Content-Length"] = "0";
+            } else if (isStream && !headers["Content-Length"]) {
+                headers["Transfer-Encoding"] = "chunked";
             }
 
             res.writeHead(status, headers);
 
-            if (headOnly) {
+            if (isEmpty) {
                 res.end();
-            } else if (body instanceof EventEmitter) {
+            } else if (isStream) {
                 if (typeof body.resume == "function") {
                     body.resume();
                 }
