@@ -1,5 +1,6 @@
 var http = require("http");
 
+exports.emptyBody = emptyBody;
 exports.normalizedHeaderName = normalizedHeaderName;
 exports.canonicalHeaderName = canonicalHeaderName;
 exports.capitalizedHeaderName = capitalizedHeaderName;
@@ -34,6 +35,14 @@ for (var statusCode in exports.HTTP_STATUS_CODES) {
  * An array of HTTP status codes that indicate no entity body.
  */
 exports.STATUS_WITH_NO_ENTITY_BODY = [100, 101, 204, 304];
+
+/**
+ * Returns `true` if the given `status` code indicates a response that MUST NOT
+ * have any content in the body.
+ */
+function emptyBody(status) {
+    return exports.STATUS_WITH_NO_ENTITY_BODY.indexOf(status) != -1;
+}
 
 /**
  * Converts the given header `name` to its normalized form.
